--- a/portfoliov2/assets/scss/components/_main.scss
+++ b/portfoliov2/assets/scss/components/_main.scss
@@ -1,20 +1,29 @@
 @use "../helpers/variables" as v;
 
 .main__content {
+  // display: none;
   grid-area: content;
   background-color: v.$secondary;
-  border-radius: 10rem 0 0 10rem;
+  border-radius: 10rem;
   min-height: 100%;
-
+  background-color: transparent;
+  box-shadow: 0 0 100px -5px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   .main__section {
     background-color: white;
     min-height: 100%;
+    height: 40rem;
     border-radius: 3.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     text-align: center;
+    gap: 1rem;
+
     h1 {
       margin: 0;
       font-size: 6rem;
