--- a/portfoliov2/assets/scss/components/_navbar.scss
+++ b/portfoliov2/assets/scss/components/_navbar.scss
@@ -1,53 +1,71 @@
 @use '../helpers/variables' as v;
 
+.user{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 3rem;
+}
+
 .user-info__navbar{
-    position: absolute;
-    top: 0;
-    left: -68px;
-    background-color: transparent;
-    min-width: 5rem;
+    margin: 0 1rem;
     .navbar__list{
-        position: relative;
         background-color: white;
-        font-size: 2.8rem;
+        font-size: 3rem;
+        box-shadow: 0 0 3rem -0.5rem rgba($color: #000000, $alpha: 0.15);
+        border-radius: 5rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 5rem;
         a{
-            color: v.$secondary;
+            color: gray;
             transition: color 0.2s linear;
             &:hover{
                 color: v.$primary;
             }
         }
-        min-height: 32rem;
-        box-shadow: 0 0 3rem -0.5rem rgba($color: #000000, $alpha: 0.15);
-        border-radius: 5rem;
+    }
+    .navbar__link{
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
-
-        padding: 2rem 0;
-    }
-    .navbar__item{
-        display: block;
+        gap: 2rem;
         width: 100%;
         text-align: center;
+        &--a{
+            font-weight: bold;
+            padding: 1rem;
+        }
     }
+    .navbar__item{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        // height: 10rem;
+        text-align: center;
+    }
+    
     .navbar__overlay{
         color: v.$primary;
         display: block;
         background-color: v.$secondary;
         white-space: nowrap;
-        position: absolute;
-        right: 2.5rem;
-        margin-top: -1rem;
+        visibility: visible;
+
         padding: 0.5rem 1rem;
-        opacity: 0;
-        transition: all 0.5s ease-out;
+        background-color: white;
+        display: none;
         border-radius: 2rem 2.5rem 0 2rem;
+        font-size: 1.5rem;
+        color: white;
+        transition: all 0.5s ease-out;
     }
     .navbar__item:hover .navbar__overlay{
-        opacity: 1;
-        right: 5.5rem;
-        margin-top: -2.5rem;
+        background-color: v.$light-primary;
+        visibility: visible;
     }
 }
