--- a/portfoliov3/src/scss/components/_main.scss
+++ b/portfoliov3/src/scss/components/_main.scss
@@ -59,16 +59,24 @@
         margin-bottom: 2rem;
     }
 
-    &__image {
-        width: 20rem;
-    }
-
     &:nth-child(1) {
-        grid-column: span 3;
+        grid-column: span 2;
         grid-row: span 2;
     }
 
     &:nth-child(2) {
+        grid-column: 3 / 4;
+        grid-row: 1 / 3;
+
+        img {
+            width: 100%;
+            height: 32rem;
+            object-fit: cover;
+            border-radius: 1rem;
+        }
+    }
+
+    &:nth-child(3) {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -78,7 +86,7 @@
         }
     }
 
-    &:nth-child(3) {
+    &:nth-child(4) {
         grid-column: 1 / 2;
         grid-row: span 2;
         display: flex;
@@ -92,7 +100,7 @@
         }
     }
 
-    &:nth-child(4) {
+    &:nth-child(5) {
         grid-column: 2 / 4;
         grid-row: span 2;
         display: flex;
@@ -119,7 +127,7 @@
         }
     }
 
-    &:nth-child(5) {
+    &:nth-child(6) {
         grid-column: 4 / 5;
         grid-row: 2 / span 3;
 
@@ -130,6 +138,45 @@
             border-radius: 1rem;
         }
 
+    }
+
+    &:nth-child(7) {
+        grid-row: span 2;
+        grid-column: span 2;
+
+        img {
+            width: 100%;
+            height: 32rem;
+            object-fit: cover;
+            border-radius: 1rem;
+        }
+    }
+
+    &:nth-child(8) {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        p {
+            font-size: 3rem;
+        }
+    }
+
+    &:nth-child(9) {
+        grid-row: 6 / 7;
+        grid-column: 3 / 4;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        p {
+            font-size: 2rem;
+        }
+    }
+
+    &:nth-child(10) {
+        grid-row: span 2;
     }
 }
 
