--- a/portfoliov3/src/scss/components/_main.scss
+++ b/portfoliov3/src/scss/components/_main.scss
@@ -12,171 +12,77 @@
     }
 }
 
-.block {
+.card{
     background-color: v.$black;
-    border-radius: 1rem;
+    border-radius: 1.5rem;
+    padding: 3rem;
 
-    &--about {
-        display: flex;
-        justify-content: space-between;
+    &--about{
+        grid-column: span 2;
+        grid-row: span 2;
+        
+        text-align: left;
 
-        img {
+        .card{
+            
+            &__content{
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+            }
+
+            &__text{
+                display: flex;
+                flex-direction: column;
+          
+                align-items: flex-start;
+            }
+        }
+    }
+
+    &--image{
+        grid-row: span 2;
+        padding: 0;
+        overflow: hidden;
+
+        img{
             width: 100%;
             height: 100%;
             object-fit: cover;
-            border-radius: 0 1rem 1rem 0;
         }
     }
 
-    &__content {
-        padding: 3.2rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-self: start;
-    }
-
-    &__social {
-        margin-top: 2rem;
-        display: flex;
-        justify-content: center;
-        gap: 4rem;
-
-        a {
-            transition: color .3s ease-in-out;
-
-            &:hover {
-                color: v.$rose;
-            }
-        }
-
-        i {
-            font-size: 5rem;
-        }
-    }
-
-    &__heading {
-        margin-bottom: 2rem;
-    }
-
-    &:nth-child(1) {
-        grid-column: span 2;
-        grid-row: span 2;
-    }
-
-    &:nth-child(2) {
-        grid-column: 3 / 4;
-        grid-row: 1 / 3;
-
-        img {
-            width: 100%;
-            height: 32rem;
-            object-fit: cover;
-            border-radius: 1rem;
-        }
-    }
-
-    &:nth-child(3) {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        p {
-            font-size: 3.2rem;
-        }
-    }
-
-    &:nth-child(4) {
-        grid-column: 1 / 2;
-        grid-row: span 2;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        padding: 8rem 3rem;
-
-        p {
-            font-size: 2.5rem;
-        }
-    }
-
-    &:nth-child(5) {
-        grid-column: 2 / 4;
-        grid-row: span 2;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-        padding: 4rem 3rem;
-
-        h3 {
-            margin: 0;
-        }
-
-        .icons {
-            width: 90%;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            gap: 2rem;
-
-            i {
-                font-size: 5rem;
-            }
-        }
-    }
-
-    &:nth-child(6) {
+    &--china{
         grid-column: 4 / 5;
-        grid-row: 2 / span 3;
-
-        img {
-            width: 100%;
-            height: 49rem;
-            object-fit: cover;
-            border-radius: 1rem;
-        }
-
+        grid-row: 2 / 5;
     }
 
-    &:nth-child(7) {
+    &--front{
+        grid-column: 1;
+        grid-row: span 2;
+    }
+
+    &--sudio{
         grid-row: span 2;
         grid-column: span 2;
-
-        img {
-            width: 100%;
-            height: 32rem;
-            object-fit: cover;
-            border-radius: 1rem;
-        }
     }
 
-    &:nth-child(8) {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        p {
-            font-size: 3rem;
-        }
+    &--tech{
+        grid-column: span 2;
+        grid-row: span 2;
     }
 
-    &:nth-child(9) {
+    &--date{
         grid-row: 6 / 7;
         grid-column: 3 / 4;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
-        p {
-            font-size: 2rem;
-        }
     }
-
-    &:nth-child(10) {
+    
+    &--interests{
         grid-row: span 2;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
@@ -197,3 +103,4 @@
     background-clip: text;
     color: transparent;
 }
+
